--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "babel-plugin-transform-es2015-generator-return",
-  "version": "1.0.0",
-  "description": "Patch Generator.prototype.return",
+  "version": "1.0.1",
+  "description": "Patch Generator.prototype.return for V8",
   "main": "lib/index.js",
-  "directories": {
-    "test": "test"
-  },
+  "files": ["lib"],
   "scripts": {
     "test": "npm run patch; mocha --ui tdd; npm run unpatch",
     "patch": "ln -s .. node_modules/babel-plugin-transform-es2015-generator-return",
@@ -28,5 +26,6 @@
   },
   "dependencies": {
     "babel-template": "^6.3.0"
-  }
+  },
+  "repository": "hax/babel-plugin-transform-es2015-generator-return"
 }
