--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.1.0",
   "description": "Patch Generator.prototype.return for V8",
   "main": "lib/index.js",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "mocha": "mocha --ui tdd",
     "test": "npm run patch; npm run mocha; npm run unpatch",
@@ -19,6 +21,7 @@
   "author": "hax <johnhax@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.6.5",
     "babel-helper-plugin-test-runner": "^6.1.18",
     "babel-plugin-transform-strict-mode": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
