--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "lib"
   ],
   "scripts": {
-    "mocha": "mocha --ui tdd",
-    "test": "npm run patch; npm run mocha; npm run unpatch",
+    "pretest": "npm run patch",
+    "posttest": "npm run unpatch",
+    "test": "mocha --ui tdd",
     "patch": "ln -s .. node_modules/babel-plugin-transform-es2015-generator-return",
     "unpatch": "rm node_modules/babel-plugin-transform-es2015-generator-return",
     "prepublish": "babel src -d lib",
