--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-	"presets": ["es2015", "stage-0"]
+    "presets": ["stage-0", "es2015"],
+    "plugins": [
+      "transform-runtime",
+    ],
+    "env": {
+      "test": {
+        "auxiliaryCommentBefore": "istanbul ignore next"
+      }
+    }
 }
