--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mocha": "^2.5.3"
   },
   "dependencies": {
+    "babel-runtime": "^6.9.2",
     "babel-template": "^6.9.0"
   },
   "repository": "hax/babel-plugin-transform-es2015-generator-return"
