--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Patch Generator.prototype.return for V8",
   "main": "lib/index.js",
   "files": [
-    "lib"
+    "lib",
+    "src"
   ],
   "scripts": {
     "mocha": "mocha --ui tdd",
