--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "src"
   ],
   "scripts": {
-    "mocha": "mocha --ui tdd",
-    "test": "npm run patch; npm run mocha; e=$?; npm run unpatch; exit $e",
-    "patch": "ln -s .. node_modules/babel-plugin-transform-es2015-generator-return",
-    "unpatch": "rm node_modules/babel-plugin-transform-es2015-generator-return",
-    "prepublish": "babel src -d lib && echo \"\nmodule.exports = exports['default'];\" >> lib/index.js",
-    "dev": "babel src -d lib -w"
+    "test": "mocha --compilers js:babel-register",
+    "dev": "npm run test -- --watch",
+    "prepublish": "rm -rf lib && babel src -d lib && echo \"\nmodule.exports = exports['default'];\" >> lib/index.js"
   },
   "keywords": [
     "babel-plugin",
@@ -24,7 +21,6 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.9.0",
-    "babel-helper-plugin-test-runner": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
