--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.1",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.9.0",
     "mocha": "^2.5.3"
   },
   "dependencies": {
