--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,9 @@
 {
-    "presets": ["stage-0", "es2015"],
-    "plugins": [
-      "transform-runtime",
-    ],
-    "env": {
-      "test": {
-        "auxiliaryCommentBefore": "istanbul ignore next"
-      }
-    }
+	"presets": ["stage-0", "es2015"],
+	"plugins": ["transform-runtime"],
+	"env": {
+		"test": {
+			"auxiliaryCommentBefore": "istanbul ignore next"
+		}
+	}
 }
