--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
   "keywords": [
     "babel-plugin",
     "generators",
-    "Generator.prototype.return"
+    "Generator.prototype.return",
+    "iterator closing"
   ],
   "author": "hax <johnhax@gmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "babel-runtime": "^6.9.2",
+    "babel-template": "^6.9.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
@@ -27,10 +32,6 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "mocha": "^2.5.3"
-  },
-  "dependencies": {
-    "babel-runtime": "^6.9.2",
-    "babel-template": "^6.9.0"
   },
   "repository": "hax/babel-plugin-transform-es2015-generator-return"
 }
