--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "src"
   ],
   "scripts": {
-    "test": "mocha --compilers js:babel-register",
+    "test": "mocha --require babel-core/register",
     "dev": "npm run test -- --watch",
     "prepublish": "rm -rf lib && babel src -d lib && echo \"\nmodule.exports = exports['default'];\" >> lib/index.js"
   },
@@ -21,16 +21,16 @@
   "author": "hax <johnhax@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^6.9.2",
-    "babel-template": "^6.9.0"
+    "babel-runtime": "^6.0.0",
+    "babel-template": "^6.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.1",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.9.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "mocha": "^5.0.1"
   },
   "repository": "hax/babel-plugin-transform-es2015-generator-return"
